[package]
name = "stryke-zmq"
version = "0.10.0"
edition = "2021"
description = "ZeroMQ cdylib for stryke. Brokerless req/rep, pub/sub, push/pull, dealer/router over a persistent in-process socket registry"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-zmq"
homepage = "https://menketechnologies.github.io/stryke-zmq/"
publish = false

[lib]
name = "stryke_zmq"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# `zmq` pulls `zmq-sys` 0.12, whose build script vendors libzmq + libsodium
# from source via `zeromq-src` (cmake). The cdylib is therefore
# self-contained — no system `libzmq.so`/`.dylib` on the consumer machine.
# First build compiles libzmq via cmake (~1-2 min); subsequent builds reuse
# the cached static archive. Needs cmake + a C/C++ compiler at build time.
zmq = "0.10"
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
